--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HK Photo Calendar</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@400;500;700&family=Quicksand:wght@400;600;700&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@400;500;700&family=Quicksand:wght@400;600;700&family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Dancing+Script:wght@400;700&family=Courier+Prime:wght@400;700&display=swap');
 
       body {
         font-family: 'Quicksand', 'Noto Sans HK', sans-serif;
@@ -14,10 +14,6 @@
 
       /* Print Styles */
       @media print {
-        @page {
-          size: A4;
-          margin: 0;
-        }
         body {
           background: white;
         }
@@ -25,8 +21,6 @@
           display: none !important;
         }
         .print-container {
-          width: 100%;
-          height: 100%;
           box-shadow: none;
           margin: 0;
           border: none;
