--- a/index.html
+++ b/index.html
@@ -14,18 +14,58 @@
 
       /* Print Styles */
       @media print {
-        body {
+        /* Reset basics */
+        html, body {
+          width: 100%;
+          height: 100%;
+          margin: 0;
+          padding: 0;
           background: white;
         }
-        .no-print {
+
+        /* Hide UI elements */
+        .no-print, .sidebar, .preview-area-bg {
           display: none !important;
         }
+
+        /* Reset Layout Containers to be passive */
+        #root, .main-layout, .preview-area, .calendar-scale-wrapper {
+          display: block !important;
+          position: static !important;
+          width: 100% !important;
+          height: auto !important;
+          overflow: visible !important;
+          transform: none !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          background: transparent !important;
+          box-shadow: none !important;
+        }
+
+        /* Target the calendar container specifically */
         .print-container {
-          box-shadow: none;
-          margin: 0;
-          border: none;
-          overflow: hidden;
-          page-break-after: always;
+          display: block !important;
+          position: absolute !important;
+          top: 0 !important;
+          left: 0 !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          z-index: 9999;
+          visibility: visible !important;
+          box-shadow: none !important;
+          /* Force print background colors */
+          print-color-adjust: exact !important;
+          -webkit-print-color-adjust: exact !important;
+          background-color: white !important;
+        }
+
+        /* Hide everything else that is not the print container or its children */
+        body > :not(#root), 
+        #root > :not(.main-layout),
+        .main-layout > :not(.preview-area),
+        .preview-area > :not(.calendar-scale-wrapper),
+        .calendar-scale-wrapper > :not(.print-container) {
+           display: none !important;
         }
       }
     </style>
